--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.4",
     "mongodb": "^3.1.12",
     "mongoose": "^4.13.18",
+    "multer": "^1.4.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
